# cheese-rolling-forever

./: .gitattributes  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yaml
app/native/: Cargo.toml
app/native/src/: main.rs
app/wasm/: Cargo.toml
app/wasm/src/: lib.rs
assets/: sources.txt
assets/shaders/: example_shader.wgsl  land_vertex_shader.wgsl  vertex_shader.wgsl
credits/: CREDITS.md
e2e/: cheese.rs  lakitu.rs  material.rs  menu.rs  ragdoll.rs  scene.rs  terrain.rs
game/: Cargo.toml
game/assets/: sources.txt
game/assets/scenes/: cheese_good.glb  cheese_ok.glb
game/e2e/: cheese.rs  lakitu.rs  menu.rs  ragdoll.rs  scene.rs  terrain.rs
game/src/: assets.rs  lib.rs  main.rs  scene.rs  ui.rs
game/src/game/: cheese.rs  mod.rs  person.rs  score.rs  systems.rs
game/src/game/camera/: mod.rs
game/src/game/cheese/: mod.rs  systems.rs
game/src/game/level/: chunk.rs  mod.rs  plugin.rs  vertex.rs
game/src/game/obstacles/: mod.rs  noise.rs  wall.rs
game/src/game/obstacles/plugin/: mod.rs  systems.rs
game/src/game/person/: mod.rs  ragdoll.rs  systems.rs
game/src/game/terrain/: chunk.rs  mod.rs  noise.rs
game/src/game/terrain/plugin/: mod.rs  systems.rs
game/src/menu/: graphic.rs  mod.rs  ui.rs
game/src/scene/: mod.rs  ui.rs
src/: assets.rs  cheese.rs  lib.rs  main.rs  person.rs  systems.rs
src/camera/: dolly.rs  mod.rs
src/game/: cheese.rs  mod.rs  person.rs  scene.rs  systems.rs
src/game/camera/: mod.rs
src/game/terrain/: chunk.rs  mod.rs
src/game/terrain/plugin/: mod.rs
src/menu/: graphic.rs  mod.rs  ui.rs
src/terrain/: chunk.rs  mod.rs  noise_utils.rs
src/terrain/plugin/: systems.rs
