[package]
name = "cheese"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_xpbd_3d = "0.3.2"
dolly = "0.4.2"
leafwing-input-manager = "0.11.2"

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto" }

[[test]]
name = "scene"
path = "e2e/scene.rs"
harness = false

[[test]]
name = "cheese"
path = "e2e/cheese.rs"
harness = false

[[test]]
name = "ragdoll"
path = "e2e/ragdoll.rs"
harness = false
