[package]
name = "cheese"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_xpbd_3d = "0.3.2"
dolly = "0.4.2"
itertools = "0.12.0"
noise = "0.8"
rand = "0.8.5"

[dev-dependencies]
bevy_geppetto = { git = "https://github.com/snendev/bevy_geppetto" }

[[test]]
name = "cheese"
path = "e2e/cheese.rs"
harness = false

[[test]]
name = "chunk"
path = "e2e/chunk.rs"
harness = false

[[test]]
name = "ragdoll"
path = "e2e/ragdoll.rs"
harness = false

[[test]]
name = "scene"
path = "e2e/scene.rs"
harness = false

[[test]]
name = "terrain"
path = "e2e/terrain.rs"
harness = false
