[package]
name = "cheese_app_wasm"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "cheese_app_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
cheese_game = { path = "../../game" }
cfg-if = { version = "1.0" }
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
